Uygulama güzel bir şekilde çalışıyor. Verileri düzgün bir şekilde gösteriyor.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,5 +58,13 @@
             app:layout_constraintTop_toBottomOf="@id/mqttMessageReceivedTextView2"
             android:layout_marginTop="16dp"/>
 
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/mqttMessageReceivedTextView3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
